Created master detail page
Created a master detail page template.

--- a/PrismApp/PrismApp.csproj
+++ b/PrismApp/PrismApp.csproj
@@ -22,4 +22,7 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Interfaces\" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Views\HomeView.xaml.cs" />
+  </ItemGroup>
 </Project>
